--- a/eas.json
+++ b/eas.json
@@ -5,12 +5,20 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "channel": "development"
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "channel": "preview"
     },
-    "production": {}
+    "production": {
+      "channel": "production",
+      "ios": {
+        "buildConfiguration": "Release",
+        "autoIncrement": "version"
+      }
+    }
   },
   "submit": {
     "production": {}
