--- a/package.json
+++ b/package.json
@@ -12,20 +12,22 @@
     "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
-    "axios": "^0.27.2",
-    "expo": "~47.0.3",
-    "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
-    "react-native": "0.70.8",
-    "react-native-gesture-handler": "~2.8.0",
-    "react-native-reanimated": "~2.12.0",
+    "axios": "^1.7.4",
+    "expo": "~51.0.30",
+    "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.23",
+    "react": "^18.2.0",
+    "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "^3.10.1",
     "react-native-render-html": "^6.3.4",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "~3.31.1",
     "react-query": "^3.39.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "metro-react-native-babel-preset": "^0.77.0"
   },
   "private": true
 }
