--- a/eas.json
+++ b/eas.json
@@ -21,6 +21,11 @@
     }
   },
   "submit": {
-    "production": {}
+    "production": {
+      "android": {
+        "serviceAccountKeyPath": "./katameros-firebase-adminsdk-o9f6k-b5f19c6a7d.json",
+        "track": "internal"
+      }
+    }
   }
 }
