--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "axios": "^1.7.4",
-    "expo": "~51.0.30",
+    "expo": "^51.0.30",
     "expo-status-bar": "~1.12.1",
     "expo-updates": "~0.25.23",
     "react": "^18.2.0",
