--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@tanstack/react-query": "^5.62.7",
     "@tanstack/react-query-persist-client": "^5.62.7",
     "axios": "^1.7.4",
-    "expo": "^52.0.18",
+    "expo": "^52.0.19",
     "expo-status-bar": "^2.0.0",
     "expo-updates": "^0.26.10",
     "react": "18.3.1",
@@ -27,6 +27,7 @@
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-toast-message": "^2.2.1",
     "react-query": "^3.39.2"
   },
   "devDependencies": {
