--- a/package.json
+++ b/package.json
@@ -11,27 +11,26 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/netinfo": "^11.4.1",
-    "@react-navigation/drawer": "^6.4.1",
-    "@react-navigation/native": "^6.0.10",
-    "@react-navigation/native-stack": "^6.6.2",
-    "@tanstack/react-query": "^5.62.7",
-    "@tanstack/react-query-persist-client": "^5.62.7",
-    "axios": "^1.7.4",
-    "expo": "^52.0.20",
-    "expo-status-bar": "^2.0.0",
-    "expo-updates": "^0.26.10",
+    "@react-navigation/drawer": "^7.0.7",
+    "@react-navigation/native": "^7.0.13",
+    "@react-navigation/native-stack": "^7.2.0",
+    "@tanstack/react-query": "^5.62.11",
+    "@tanstack/react-query-persist-client": "^5.62.11",
+    "axios": "^1.7.9",
+    "expo": "~52.0.23",
+    "expo-status-bar": "~2.0.0",
+    "expo-updates": "~0.27.4",
     "react": "18.3.1",
-    "react-native": "0.76.5",
+    "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated": "~3.16.6",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-toast-message": "^2.2.1",
-    "react-query": "^3.39.2"
+    "react-native-toast-message": "^2.2.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.26.0",
     "metro-react-native-babel-preset": "^0.77.0"
   },
   "private": true
