--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/drawer": "^7.0.7",
     "@react-navigation/native": "^7.0.13",
@@ -17,20 +17,22 @@
     "@tanstack/react-query": "^5.62.11",
     "@tanstack/react-query-persist-client": "^5.62.11",
     "axios": "^1.7.9",
-    "expo": "~52.0.23",
-    "expo-status-bar": "~2.0.0",
-    "expo-updates": "~0.27.4",
-    "react": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.6",
+    "expo": "^54.0.30",
+    "expo-status-bar": "~3.0.9",
+    "expo-updates": "~29.0.15",
+    "react": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "^4.1.1",
     "react-native-render-html": "^6.3.4",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-toast-message": "^2.2.1"
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-toast-message": "^2.2.1",
+    "react-native-worklets": "^0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
+    "babel-preset-expo": "^54.0.9",
     "metro-react-native-babel-preset": "^0.77.0"
   },
   "private": true
